--- a/transmission-service.html
+++ b/transmission-service.html
@@ -72,6 +72,23 @@
 </head>
 
 <body>
+<div class="floating-container">
+    <a href="javascript:void(0)" class="floating-btn" id="mainBtn">
+        <i class="fa fa-plus"></i>
+    </a>
+
+    <!-- Options Menu (hidden by default) -->
+    <div class="floating-options" id="optionsMenu">
+        <a href="tel:0413925853" class="option-btn">
+            <i class="fa fa-phone"></i> Call
+        </a>
+        <a href="index.html#bookingSection" class="option-btn">
+            <i class="fa fa-car"></i> Book Service
+        </a>
+    </div>
+</div>
+
+
     <!-- Spinner Start -->
     <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
@@ -90,7 +107,7 @@
                 </div>
                 <div class="h-100 d-inline-flex align-items-center py-3">
                     <small class="far fa-clock text-primary me-2"></small>
-                    <small>Mon - Fri : 09.00 AM - 09.00 PM</small>
+                    <small>Mon - Fri : 09.00 AM - 06.00 PM (Special Assistance Available)</small>
                 </div>
             </div>
             <div class="col-lg-5 px-5 text-end">
@@ -120,8 +137,8 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link">Home</a>
-                <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="services.html" class="nav-item nav-link">Services</a>
+                
+                <!-- <a href="services.html" class="nav-item nav-link">Services</a> -->
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                     <div class="dropdown-menu fade-up m-0">
@@ -132,9 +149,12 @@
                         <a href="transmission-service.html" class="dropdown-item">Transmission & Driveline</a>
                         <a href="diagnostic-services.html" class="dropdown-item">Diagnostic Services</a>
                         <a href="accessory-installation.html" class="dropdown-item">Accessory Installation</a>
-                        <a href="coming-soon.html" class="dropdown-item">Coming Soon Services</a>
+                         <a href="coming-soon.html" class="dropdown-item">Window Tinting</a>
+                        <a href="coming-soon.html" class="dropdown-item">Car Wrapping</a>
+                        <a href="coming-soon.html" class="dropdown-item">Interior & Exterior Car Washing</a>
                     </div>
                 </div>
+                <a href="about.html" class="nav-item nav-link">About</a>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
             <a href="contact.html" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Get A Quote<i class="fa fa-arrow-right ms-3"></i></a>
@@ -204,7 +224,7 @@
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Address</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Tasmania, Australia</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>0413 925 8530</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>0413 925 853</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>autosolution.au@gmail.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
@@ -216,9 +236,9 @@
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Opening Hours</h4>
                     <h6 class="text-light">Monday - Friday:</h6>
-                    <p class="mb-4">09.00 AM - 09.00 PM</p>
+                    <p class="mb-4">09.00 AM - 06.00 PM (Special Assistance Available)</p>
                     <h6 class="text-light">Saturday - Sunday:</h6>
-                    <p class="mb-0">09.00 AM - 12.00 PM</p>
+                    <p class="mb-0">09.00 AM - 06.00 PM (Special Assistance Available)</p>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Services</h4>
@@ -228,7 +248,7 @@
                     <a class="btn btn-link" href="transmission-service.html" >Transmission & Driveline</a>
                     <a class="btn btn-link" href="diagnostic-services.html" >Diagnostic Services</a>
                     <a class="btn btn-link" href="accessory-installation.html" >Accessory Installation</a>
-                    <a class="btn btn-link" href="coming-soon.html" >Coming Soon Services</a>
+                    <a class="btn btn-link" href="coming-soon.html" >Coming Soon</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Newsletter</h4>
